@@ -6,37 +6,21 @@ By the default, the timezone is inherited from the timezone of the operating sys
 
 ## Viewing the Time Zone
 
-The current timezone is displayed on the **Admin: System Information** page.
+The current timezone is displayed on the **Admin > System Information** page.
 
-![](images/timezone.png)
+![](../installation/images/server_time.png)
 
 ## Changing the Time Zone
 
 * Select Timezone ID from the following [list](../api/network/timezone-list.md), for example, "US/Pacific".
 
-* Open `/opt/atsd/atsd/bin/start-atsd.sh` file and scroll down to the section with uncommented $java_command for "GC logs disabled".
+* Uncomment the `TIME_ZONE` line block in the ATSD environment settings file `/opt/atsd/atsd/conf/atsd-env.sh`.
 
-  ```
-  echo " * [ATSD] ATSD `$java_command -version 2>&1 | head -n 1`"
-  #GC logs disabled
-  if grep -qi "arm" /proc/cpuinfo; then
-      "$java_command" -server -Xmx4096M -XX:MaxPermSize=128m ...
-  else
-      "$java_command" -server -Xmx4096M -XX:MaxPermSize=128m ...
-  fi
-  ```
-
-* Add property `-Duser.timezone` to the second command (not "arm").
-
-  ```
-  echo " * [ATSD] ATSD `$java_command -version 2>&1 | head -n 1`"
-  #GC logs disabled
-  if grep -qi "arm" /proc/cpuinfo; then
-      "$java_command" -server -Xmx4096M -XX:MaxPermSize=128m ...
-  else
-      "$java_command" -server -Duser.timezone=US/Pacific -Xmx4096M -XX:MaxPermSize=128m ...
-  fi
-  ```
+```bash
+# Uncomment to set custom timezone
+TIME_ZONE=US/Pacific
+export JAVA_PROPERTIES="-Duser.timezone=${TIME_ZONE} $JAVA_PROPERTIES"
+```
 
 * Restart ATSD.
 
@@ -45,4 +29,4 @@ The current timezone is displayed on the **Admin: System Information** page.
 /opt/atsd/atsd/bin/start-atsd.sh
 ```
 
-* Open the **Admin: System Information** page and verify that the new timezone setting is set.
+* Open the **Admin > System Information** page and verify that the new timezone setting is set.
